Final submit unfortunately, still has issues

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="main-container">
         <div id="main-section">
             <h1>World War II Trivia</h1>
+            <h2 id="timer"></h2>
 
             <button id="triviaStart">How much do you know
                 <br /> about the worlds greatest war?
